# stm32-first-rs

./: Cargo.toml  memory.x
.cargo/: config
src/: main.rs
